# pas

./: .gitignore  Cargo.toml  README.md  pas_2024-05-13T19-44.json
.github/workflows/: build_packages.yml
doc/: use_custom_socket_connection.MD
src/: archiver.rs  lib.rs  main.rs  processor.rs  reader.rs  webserver.rs  webserver_copy.rs
src/processor/: deltatable.rs  mod.rs  pg_database.rs  pg_settings.rs  pg_stat_activity.rs  pg_stat_bgwriter.rs  pg_stat_database.rs  pg_stat_wal.rs  wait_events.rs
src/webserver/: io.rs  mod.rs  query.rs  transactions.rs  tuples.rs  wait_events.rs  wal.rs  xid_age.rs
systemd-unit-file/: README.md  pas.service
