[package]
name = "pas"
version = "0.1.7"
edition = "2021"
license = "apache-2.0"
description = "A utility to obtain statistics from a postgres database cluster."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bigdecimal = "0.4.3"
bounded-vec-deque = "0.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ctrlc = "3.4.4"
futures = "0.3.30"
human_bytes = "0.4.3"
image = "0.25.1"
once_cell = "1.19.0"
plotters = "0.3.6"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "bigdecimal",
] }
tokio = { version = "1.37.0", features = ["full"] }

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/pas", dest = "/usr/local/bin/pas", mode = "0755" },
]
release = "1.el8"

[package.metadata.deb]
copyright = "2024, Frits Hoogland <fhoogland@gmail.com>"
maintainer = "Frits Hoogland <fhoogland@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/pas", "/usr/local/bin/", "755"]]
